# PomodorApp

./: .gitignore  CMakeLists.txt  README.md
src/: MainFrame.cpp  MainFrame.h  SettingsDialog.cpp  SettingsDialog.h  main  main.cpp
